--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.social-btn {
+  width: 70px;
+  height: 30px;
+  color: white;
+  background-color: #3B5998;
+  font-family: helvetica, arial, sans-serif;
+  font-weight: bold;
+  font-size: 11px;
+  padding: 5px;
+  margin-top: 300px;
+  border: 2px solid black;
+  position: relative;
+  box-shadow: inset 0 1px 1px white;
+  text-align: center
+}
