--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,3 @@
 <h1>About Bloccit</h1>
 <p>Created by: ME</p>
+<%= link_to "Follow me", "https://www.instagram.com/justin_boltz/", class: "social-btn" %>
