--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -19,8 +19,22 @@
         </div>
       </div>
     <% end %>
+    <p>_________________________________________________</p>
+    <% @topic.sponsored_posts.each do |spost| %>
+      <div class="media">
+        <div class="media-body">
+          <h4 class="media-heading">
+            <%= link_to spost.title, topic_sponsored_post_path(@topic, spost) %>
+          </h4>
+          <small>
+
+          </small>
+        </div>
+      </div>
+    <% end %>
   </div>
   <div class="col-md-4">
-    <% link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
+    <%= link_to "New Sponsored Post", new_topic_sponsored_post_path(@topic), class: 'btn btn-success' %>
+    <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
   </div>
 </div>
