--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <h2>Sign up</h2>
- 
+
 <div class="row">
   <div class="col-md-8">
     <%= form_for @user do |f| %>
@@ -7,7 +7,7 @@
         <div class="alert alert-danger">
           <h4><%= pluralize(@user.errors.count, "error") %>.</h4>
           <ul>
-            <% @user.errors.full_messages.each do |msg| %>
+            <% @user.errors.full_message.each do |msg| %>
               <li><%= msg %></li>
             <% end %>
           </ul>
