--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,37 +1,23 @@
-<h2>Sign up</h2>
- 
-<div class="row">
-  <div class="col-md-8">
-    <%= form_for @user do |f| %>
-      <% if @user.errors.any? %>
-        <div class="alert alert-danger">
-          <h4><%= pluralize(@user.errors.count, "error") %>.</h4>
-          <ul>
-            <% @user.errors.full_messages.each do |msg| %>
-              <li><%= msg %></li>
-            <% end %>
-          </ul>
-        </div>
-      <% end %>
-      <%= form_group_tag(@user.errors[:name]) do %>
-        <%= f.label :name %>
-        <%= f.text_field :name, autofocus: true, class: 'form-control', placeholder: "Enter name" %>
-      <% end %>
-      <%= form_group_tag(@user.errors[:email]) do %>
-        <%= f.label :email %>
-        <%= f.email_field :email, class: 'form-control', placeholder: "Enter email" %>
-      <% end %>
-      <%= form_group_tag(@user.errors[:password]) do %>
-        <%= f.label :password %>
-        <%= f.password_field :password, class: 'form-control', placeholder: "Enter password" %>
-      <% end %>
-      <%= form_group_tag(@user.errors[:password_confirmation]) do %>
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Enter password confirmation" %>
-      <% end %>
-      <div class="form-group">
-        <%= f.submit "Sign up", class: 'btn btn-success' %>
-      </div>
-    <% end %>
+<%= form_for [topic, post] do |f| %>
+  <% if post.errors.any? %>
+    <div class="alert alert-danger">
+      <h4><%= pluralize(post.errors.count, "error") %>.</h4>
+      <ul>
+        <% post.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <%= form_group_tag(post.errors[:title]) do %>
+    <%= f.label :title %>
+    <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
+  <% end %>
+  <%= form_group_tag(post.errors[:body]) do %>
+    <%= f.label :body %>
+    <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
+  <% end %>
+  <div class="form-group">
+    <%= f.submit "Save", class: 'btn btn-success' %>
   </div>
-</div>
+<% end %>
