--- a/app/views/users/confirm.html.erb
+++ b/app/views/users/confirm.html.erb
@@ -16,6 +16,6 @@
     </div>
   <div class="col-md-8">
     <%= button_to "Yes", {controller: "users", action: "create", params: params}, class: 'btn btn-success' %>
-    <%= link_to "No", new_user_path(@user), class: 'btn btn-danger' %>
+    <%= button_to "No", {controller: "users", action: "new"}, class: 'btn btn-danger', method: "get" %>
   </div>
 </div>
