--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,9 +1,17 @@
 <div class="media">
   <div class="media-body">
     <small>
-      <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
-      <% if user_is_authorized_for_comment?(comment) %>
+      <% if comment.post %>
+        <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
+        <% if user_is_authorized_for_comment?(comment) %>
         | <%= link_to "Delete", [@post, comment], method: :delete %>
+        <% end %>
+      <% end %>
+      <% if comment.topic %>
+        <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
+        <% if user_is_authorized_for_comment?(comment) %>
+        | <%= link_to "Delete", [@topic, comment], method: :delete %>
+        <% end %>
       <% end %>
     </small>
     <p><%= comment.body %></p>
