--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -13,10 +13,10 @@
     </p>
     <div>
       <h3>Comments</h3>
-      <%= render @topic.comments %>
+      <%= "render @topic.comments" %>
     </div>
     <% if current_user %>
-      <%= render 'comments/form', comment: Comment.new, topic: @topic %>
+      <%= render 'comments/form', comment: Comment.new, parent: @topic %>
     <% end %>
     <% @topic.posts.each do |post| %>
       <div class="media">
