--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,8 +2,13 @@
   <div class="media-body">
     <small>
       <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
-      <% if user_is_authorized_for_comment?(comment) %>
-        | <%= link_to "Delete", [@parent, comment], method: :delete %>
+      <% if user_is_authorized_for_comment?(comment) %> | 
+        <% if @topic %>
+          <%= link_to "Delete", [@topic, comment], method: :delete %>
+        <% end %>
+        <% if @post %>
+          <%= link_to "Delete", [@post, comment], method: :delete %>
+        <% end %>
       <% end %>
     </small>
     <p><%= comment.body %></p>
