--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,10 +19,14 @@
     <p><%= @post.body %></p>
     <div>
       <h3>Comments</h3>
-      <%= render @post.comments %>
+      <div class="js-comments">
+        <%= render @post.comments %>
+      </div>
     </div>
     <% if current_user %>
-      <%= render 'comments/form', comment: Comment.new, post: @post %>
+      <div class="new-comment">
+        <%= render 'comments/form', comment: Comment.new, post: @post %>
+      </div>
     <% end %>
   </div>
   <% if user_is_authorized_for_post?(@post) %>
