Fix favorite posts on user profile

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,3 +28,10 @@
 <% else %>
   <h4><%= "#{@user.name} has not submitted any posts yet." %></h4>
 <% end %>
+
+<% if @user.favorites.length > 0 %>
+  <h2>Favorites</h2>
+  <p>
+  <%= render @user.favorite_posts %>
+  </p> 
+<% end %>
