--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,7 +26,7 @@
       </div>
     </div>
     <% if current_user %>
-      <div class="new-comment">
+      <div class="new-comment clearfix">
         <%= render 'comments/form', comment: Comment.new, post: @post %>
       </div>
     <% end %>
