--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,8 @@
 <head>
   <title>Bloccit</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -13,7 +13,7 @@
 			<li><%= link_to "Bloccit", root_path %></li>
       <li><%= link_to "Topics", topics_path %></li>
 			<li><%= link_to "About", about_path %></li>
-		  
+
       <div class="pull-right user-info">
       <% if current_user %>
         <%= image_tag current_user.avatar_url(48), class: "gravatar" %>
@@ -44,9 +44,9 @@
         </div>
       <% end %>
     </div>
-
-		<%= yield %>
+    <%= yield %>
+		<%= yield :extended_scripts %>
 	</div>
-	
+
 </body>
 </html>
