--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,13 @@
 <h2>Sign up</h2>
 
+<% content_for :extended_scripts do %>
+  <script type="text/javascript">
+    console.log("user profile called");
+    alert("user profile");
+    blocmetrics.report("sale");
+  </script>
+<% end %>
+
 <div class="row">
   <div class="col-md-8">
     <%= form_for @user do |f| %>
