Correct database errors for deleting

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,3 +1,5 @@
 <h1>About Bloccit</h1>
-<p>Created by: ME</p>
-<%= link_to "Follow me", "https://www.instagram.com/justin_boltz/", class: "social-btn" %>
+<h3>Created by: Justin Boltz</h3>
+<h2>
+  <%= link_to "justinboltz.com", "http://www.justinboltz.com" %>
+</h2>
