--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,5 +1,8 @@
-<h1>Topics</h1>
-
+<h1>Topics
+<% if user_is_authorized_for_topics? %>
+    <%= link_to "New Topic", new_topic_path, class: 'btn btn-primary' %>
+<% end %>
+</h1>
 <div class="row">
   <div class="col-md-8">
     <% @topics.each do |topic| %>
@@ -15,9 +18,4 @@
       </div>
     <% end %>
   </div>
-  <% if user_is_authorized_for_topics? %>
-    <div class="col-md-4">
-      <%= link_to "New Topic", new_topic_path, class: 'btn btn-success' %>
-    </div>
-  <% end %>
 </div>
