--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,23 +2,25 @@
 <div class="jumbotron">
   <h1>Bloccit</h1>
   <p>Bloccit is a resource for sharing links with your friends!</p>
-  <p>
-    <%= link_to "Sign In", new_session_path %> or
-    <%= link_to "Sign Up", new_user_path, class: 'btn btn-primary' %> today!
-  </p>
+  <% if current_user.nil? %>
+    <p>
+      <%= link_to "Sign In", new_session_path %> or
+      <%= link_to "Sign Up", new_user_path, class: 'btn btn-primary' %> today!
+    </p>
+  <% end %>
 </div>
- 
+
 <div class="row">
   <div class="col-md-4">
-    <h2>Solves world hunger</h2>
-    <p>Bloccit will deliver food and water to those in need, all over the world.</p>
+    <h2>Improve your confidence</h2>
+    <p>Sharing your thoughts with others will make you think you're smarter than you actually are!</p>
   </div>
   <div class="col-md-4">
-    <h2>Eliminates poverty</h2>
-    <p>Bloccit will deliver money and education to those in need, all over the world.</p>
+    <h2>Let your opinion be known</h2>
+    <p>Upvote the things you agree with and downvote the things you don't.</p>
   </div>
   <div class="col-md-4">
-    <h2>Makes you better looking</h2>
-    <p>Bloccit will make you better looking: it's scientifically proven to make men look like Ryan Gosling and women look like Shakira.</p>
+    <h2>Learn exciting new things</h2>
+    <p>Make up for all those things your parents never taught you</p>
   </div>
 </div>
